--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish NuGet Package
 on:
   push:
     branches:
-      - /feature/Toolbox-nuget-package
+      - develop
     tags:
       - '*.*.*.*'   # optional: only run on version tags like v1.0.0
 
