Change dotnet SDK version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '4.8' # or 6.0.x / 7.0.x / 4.8 SDK depending on your project
+          dotnet-version: '8.0.x' # or 6.0.x / 7.0.x / 4.8 SDK depending on your project
 
       - name: Restore dependencies
         run: dotnet restore
