--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,13 +21,13 @@ jobs:
           dotnet-version: '8.0.x' # or 6.0.x / 7.0.x / 4.8 SDK depending on your project
 
       - name: Restore dependencies
-        run: dotnet restore 20251209/Wifi.Toolbox/Wifi.Toolbox.csproj
+        run: dotnet restore 20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
 
       - name: Build
-        run: dotnet build 20251209/Wifi.Toolbox/Wifi.Toolbox.csproj --configuration Release --no-restore
+        run: dotnet build 20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj --configuration Release --no-restore
 
       - name: Pack NuGet package
-        run: dotnet pack 20251209/Wifi.Toolbox/Wifi.Toolbox.csproj --configuration Release --no-build -o ./artifacts
+        run: dotnet pack 20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj --configuration Release --no-build -o ./artifacts
 
       # --- Publish to GitHub Packages ---
       - name: Publish to GitHub Packages
