--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,10 @@ on:
     tags:
       - '*.*.*.*'   # optional: only run on version tags like v1.0.0
 
+permissions:
+  contents: read
+  packages: write   # this is the important one
+
 jobs:
   publish:
     runs-on: ubuntu-latest
