--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,9 +3,9 @@ name: Publish NuGet Package
 on:
   push:
     branches:
-      - develop
+      - main
     tags:
-      - '*.*.*.*'   # optional: only run on version tags like v1.0.0
+      - 'v*.*.*'   # optional: only run on version tags like v1.0.0
 
 permissions:
   contents: read
