Create doku and add logo icon

--- a/20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
+++ b/20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
@@ -22,10 +22,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Include="..\Logo.jpg">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Include="Logo.jpg" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 	<!-- Only add specific items if you need to override defaults.
