--- a/20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
+++ b/20251209/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
@@ -23,10 +23,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\readme.md">
-		  <Pack>True</Pack>
-		  <PackagePath>\</PackagePath>
-		</None>
+		<None Include="..\readme.md" Pack="true" PackagePath="\" />
 		<None Include="Logo.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 
