Update description & move readme.md file

--- a/20251211/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
+++ b/20251211/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
@@ -7,7 +7,11 @@
 		<PackageId>Wifi.Toolbox</PackageId>
 		<Version>1.0.0</Version>
 		<Authors>Atilla Kati</Authors>
-		<Description>A awesome library with tools for use in Console applications</Description>
+		<Description>The Wifi.Toolbox.Tools contains our basic methods, which we wrote during the course and which are very helpful for implementing applications in the console. Each student is required to maintain this package independently. The necessary infrastructure will be prepared in class.
+
+The following methods are included in the package:
+- Reading in numerical values
+- Methods for designing console interfaces</Description>
 		<PackageTags>utilities;framework48</PackageTags>
 		<RepositoryUrl>https://github.com/atillakati/sw_developer_2025_atilla/tree/develop/20251211/Wifi.Toolbox</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -23,8 +27,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\readme.md" Pack="true" PackagePath="\" />
 		<None Include="Logo.png" Pack="true" PackagePath="" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>	
 </Project>
 
