Update meta files

--- a/20251211/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
+++ b/20251211/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
@@ -27,11 +27,8 @@ The following methods are included in the package:
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="Logo.png" Pack="true" PackagePath="" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Update="readme.md" Pack="true" PackagePath="\" />
+		<None Include="Logo.png" Pack="True" PackagePath="\" />
+	    <None Update="readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>	
 </Project>
 
