--- a/20251211/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
+++ b/20251211/Wifi.Toolbox/Wifi.Toolbox.Tools/Wifi.Toolbox.Tools.csproj
@@ -12,7 +12,7 @@
 The following methods are included in the package:
 - Reading in numerical values
 - Methods for designing console interfaces</Description>
-		<PackageTags>utilities;framework48</PackageTags>
+		<PackageTags>utilities;framework48;framework8</PackageTags>
 		<RepositoryUrl>https://github.com/atillakati/sw_developer_2025_atilla/tree/develop/20251211/Wifi.Toolbox</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
@@ -31,8 +31,8 @@ The following methods are included in the package:
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="package-icon.png" Pack="true" PackagePath="\" />
-	    <None Update="readme.md" Pack="true" PackagePath="\" />
+		<None Include="package-icon.png" Pack="true" PackagePath="\" />
+	    <None Include="readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>	
 </Project>
 
